// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Footer /> renders correctly 1`] = `
<div
  className="footer"
>
  <div
    className="content"
  >
    <div>
      Denne tjenesten tilbys av Studentmediene i Trondheim AS. Musikken er gjengitt med tilatelse fra TONO/NCB.
    </div>
    <div>
      Uautorisert lenking, videreføring eller kopiering er ulovlig.
    </div>
    <br />
    <div>
      Radioredaktør: 
      radioEditor
    </div>
    <div>
      Ansvarlig redaktør: 
      chiefEditor
    </div>
    <br />
    <div
      className="socialMediaLinks"
    >
      <SocialMediaContainer />
      <br />
    </div>
    <a
      className="footerLink"
      href="mailto:redaktor@radiorevolt.no"
    >
      Kontakt oss
    </a>
    <Link
      className="footerLink"
      replace={false}
      to="/om"
    >
      Om oss
    </Link>
    <Link
      className="footerLink"
      replace={false}
      to="/personvern"
    >
      Personvern
    </Link>
    <p>
      2019
       © Radio Revolt
    </p>
  </div>
</div>
`;

exports[`<Footer /> renders correctly on error 1`] = `
<div
  className="footer"
>
  <div
    className="content"
  >
    <div>
      Denne tjenesten tilbys av Studentmediene i Trondheim AS. Musikken er gjengitt med tilatelse fra TONO/NCB.
    </div>
    <div>
      Uautorisert lenking, videreføring eller kopiering er ulovlig.
    </div>
    <br />
    <div>
      Radioredaktør: 
      Feil ved innlasting, prøv igjen senere
    </div>
    <div>
      Ansvarlig redaktør: 
      Feil ved innlasting, prøv igjen senere
    </div>
    <br />
    <div
      className="socialMediaLinks"
    >
      <SocialMediaContainer />
      <br />
    </div>
    <a
      className="footerLink"
      href="mailto:redaktor@radiorevolt.no"
    >
      Kontakt oss
    </a>
    <Link
      className="footerLink"
      replace={false}
      to="/om"
    >
      Om oss
    </Link>
    <Link
      className="footerLink"
      replace={false}
      to="/personvern"
    >
      Personvern
    </Link>
    <p>
      2019
       © Radio Revolt
    </p>
  </div>
</div>
`;

exports[`<Footer /> renders correctly while loading 1`] = `
<div
  className="footer"
>
  <div
    className="content"
  >
    <div>
      Denne tjenesten tilbys av Studentmediene i Trondheim AS. Musikken er gjengitt med tilatelse fra TONO/NCB.
    </div>
    <div>
      Uautorisert lenking, videreføring eller kopiering er ulovlig.
    </div>
    <br />
    <div>
      Radioredaktør: 
      Laster inn...
    </div>
    <div>
      Ansvarlig redaktør: 
      Laster inn...
    </div>
    <br />
    <div
      className="socialMediaLinks"
    >
      <SocialMediaContainer />
      <br />
    </div>
    <a
      className="footerLink"
      href="mailto:redaktor@radiorevolt.no"
    >
      Kontakt oss
    </a>
    <Link
      className="footerLink"
      replace={false}
      to="/om"
    >
      Om oss
    </Link>
    <Link
      className="footerLink"
      replace={false}
      to="/personvern"
    >
      Personvern
    </Link>
    <p>
      2019
       © Radio Revolt
    </p>
  </div>
</div>
`;
